src/test/ui/self/elision/ref-struct-async.base.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ref-struct-async.rs:16:9
   |
LL |     async fn ref_Struct(self: &Struct, f: &u32) -> &u32 {
   |                                           ----     ----
   |                                           |
   |                                           this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn ref_Struct<'a>(self: &'a Struct, f: &'a u32) -> &u32 {
   |                        ++++        ++             ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-struct-async.rs:22:9
   |
LL |     async fn box_ref_Struct(self: Box<&Struct>, f: &u32) -> &u32 {
   |                                                    ----     ----
   |                                                    |
   |                                                    this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn box_ref_Struct<'a>(self: Box<&'a Struct>, f: &'a u32) -> &u32 {
   |                            ++++            ++              ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-struct-async.rs:28:9
   |
LL |     async fn pin_ref_Struct(self: Pin<&Struct>, f: &u32) -> &u32 {
   |                                                    ----     ----
   |                                                    |
   |                                                    this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn pin_ref_Struct<'a>(self: Pin<&'a Struct>, f: &'a u32) -> &u32 {
   |                            ++++            ++              ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-struct-async.rs:34:9
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&Struct>>, f: &u32) -> &u32 {
   |                                                             ----     ----
   |                                                             |
   |                                                             this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn box_box_ref_Struct<'a>(self: Box<Box<&'a Struct>>, f: &'a u32) -> &u32 {
   |                                ++++                ++               ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-struct-async.rs:40:9
   |
LL |     async fn box_pin_Struct(self: Box<Pin<&Struct>>, f: &u32) -> &u32 {
   |                                                         ----     ----
   |                                                         |
   |                                                         this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     async fn box_pin_Struct<'a>(self: Box<Pin<&'a Struct>>, f: &'a u32) -> &u32 {
   |                            ++++                ++               ++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0623`.
